Fix: [수정] CircularProgressBar 수정 - invisible, warning, error 구간 도입 - 텍스트 삽입
Refs: #175

--- a/src/shared/pages/ui/PostEditor/ui/CircularProgressBar/CircularProgressBar.module.css
+++ b/src/shared/pages/ui/PostEditor/ui/CircularProgressBar/CircularProgressBar.module.css
@@ -1,7 +1,32 @@
 .circular__progress__bar {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.text {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 0.7rem;
+  line-height: 1.85rem;
+  text-align: center;
+  transition: color 0.2s ease-in-out;
+}
+
+.text--invisible {
+  color: transparent;
+}
+
+.text--warning {
+  color: orange;
+}
+
+.text--error {
+  color: red;
 }
 
 .svg {
@@ -20,4 +45,17 @@
   fill: none;
   stroke: var(--colorTheme-color-primary);
   stroke-width: 2;
+  transition: stroke 0.2s ease-in-out;
+}
+
+.progress--warning {
+  stroke: orange;
+}
+
+.progress--error {
+  stroke: red;
+}
+
+.progress--invisible {
+  stroke: transparent;
 }
